fix scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -42,7 +42,6 @@ body {
 
 body::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: rgba(0, 0, 0, 0.1);
 }
 
 body::-webkit-scrollbar {
